--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
     /* display:grid; */
 }
 
+html, body {
+    overflow-x: hidden;
+  }
+
+
 body {
     /* grid-template-columns: repeat(5, 1fr);
     grid-gap: 20px;
@@ -13,6 +18,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     color: rgb(0, 0, 0);
     font-size: 1.1rem;
+    position: relative;
     /* background-image: linear-gradient(100deg, #000000, #9FDCFD);
   	background-image: -moz-linear-gradient(270deg, #000000 5%, #9FDCFD); */
     
@@ -101,6 +107,7 @@ h1 {
     margin-bottom: 20px;
     text-decoration-color: #FFCACE;
     text-decoration-thickness: 3px; 
+    width: 90%;
 }
 
 h3, h4 {
@@ -113,7 +120,7 @@ h3, h4 {
 
 
 
-/*  ---------- text  ---------------*/
+/*  ---------- svg  ---------------*/
 svg {
     translate: 0% 0%;
     
@@ -180,8 +187,26 @@ svg {
 
 
 
+/* ----------------- button div -------------- */
+.buttondiv {
+    height: 100px;
+    background-color: rgb(244, 176, 175, .4) ;
+    margin: 90px 0px;
+}
 
-
+.belowheaderbuttons {
+    display: inline-block;
+    margin: 10px;
+    background-color: #fff;
+    border: none;
+    color: #FFCACE;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    
+}
 
 
 
@@ -338,3 +363,39 @@ a:visited {
     box-shadow: 10px 10px 20px 10px rgb(184, 185, 185, .3);
 }
 
+
+
+
+/* --------Sub pages ------------ */
+
+.introheading2 {
+    margin: 30px auto;
+    text-align: center;
+}
+
+.introheadline {
+    margin: 0 auto;
+}
+
+#computersvg {
+    margin: 0 auto;
+}
+
+@media (min-width: 768px){
+    #computersvg {
+        translate: 0% 0%;
+        width: 600px;
+        height: 500px;
+    }   
+}
+
+.projectdiv {
+    background-color: rgb(244, 176, 175, .4);
+    padding:10px
+}
+.projectheading {
+    text-align: center;
+}
+.projectdescription {
+    margin: 30px;
+}
